--- a/llt.bib
+++ b/llt.bib
@@ -7,6 +7,11 @@
   institution={SRI INTERNATIONAL MENLO PARK CA ARTIFICIAL INTELLIGENCE CENTER}
 }
 
+@misc{eyespectrum, title={Normalized human photoreceptor absorbances for different wavelengths of light}, 
+author={OpenStax College},
+year={2013},
+url={https://cnx.org/contents/FPtK1zmh@6.27:s3XqfSLV@4/Sensory-Perception}}
+
 
 @misc{nixsensorltd, title={Nix Mini Color Sensor | The perfect tool for paint color matching}, url={https://www.nixsensor.com/nix-mini/}, journal={Nix Sensor Ltd}} 
 
